fixed horizontal scrolling issue

--- a/s.css
+++ b/s.css
@@ -4,7 +4,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 /*Stripe styles*/
